--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {
       "image/jpeg": {
        "height": 100,
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[4177 rows x 9 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,33 +261,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       0.455\n",
-       "1       0.350\n",
-       "2       0.530\n",
-       "3       0.440\n",
-       "4       0.330\n",
-       "        ...  \n",
-       "4172    0.565\n",
-       "4173    0.590\n",
-       "4174    0.600\n",
-       "4175    0.625\n",
-       "4176    0.710\n",
-       "Name: Length, Length: 4177, dtype: float64"
+       "0       15\n",
+       "1        7\n",
+       "2        9\n",
+       "3       10\n",
+       "4        7\n",
+       "        ..\n",
+       "4172    11\n",
+       "4173    10\n",
+       "4174     9\n",
+       "4175    10\n",
+       "4176    12\n",
+       "Name: Rings, Length: 4177, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abalone[\"Length\"]"
+    "abalone[\"Rings\"]"
    ]
   },
   {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "Name: Sex, Length: 4177, dtype: int8"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,52 +339,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X --------- X       Sex  Diameter  Height  Whole weight  Shucked weight  Viscera weight  \\\n",
-      "0       2     0.365   0.095        0.5140          0.2245          0.1010   \n",
-      "1       2     0.265   0.090        0.2255          0.0995          0.0485   \n",
-      "2       0     0.420   0.135        0.6770          0.2565          0.1415   \n",
-      "3       2     0.365   0.125        0.5160          0.2155          0.1140   \n",
-      "4       1     0.255   0.080        0.2050          0.0895          0.0395   \n",
-      "...   ...       ...     ...           ...             ...             ...   \n",
-      "4172    0     0.450   0.165        0.8870          0.3700          0.2390   \n",
-      "4173    2     0.440   0.135        0.9660          0.4390          0.2145   \n",
-      "4174    2     0.475   0.205        1.1760          0.5255          0.2875   \n",
-      "4175    0     0.485   0.150        1.0945          0.5310          0.2610   \n",
-      "4176    2     0.555   0.195        1.9485          0.9455          0.3765   \n",
+      "X --------- X       Sex  Length  Diameter  Height  Whole weight  Shucked weight  \\\n",
+      "0       2   0.455     0.365   0.095        0.5140          0.2245   \n",
+      "1       2   0.350     0.265   0.090        0.2255          0.0995   \n",
+      "2       0   0.530     0.420   0.135        0.6770          0.2565   \n",
+      "3       2   0.440     0.365   0.125        0.5160          0.2155   \n",
+      "4       1   0.330     0.255   0.080        0.2050          0.0895   \n",
+      "...   ...     ...       ...     ...           ...             ...   \n",
+      "4172    0   0.565     0.450   0.165        0.8870          0.3700   \n",
+      "4173    2   0.590     0.440   0.135        0.9660          0.4390   \n",
+      "4174    2   0.600     0.475   0.205        1.1760          0.5255   \n",
+      "4175    0   0.625     0.485   0.150        1.0945          0.5310   \n",
+      "4176    2   0.710     0.555   0.195        1.9485          0.9455   \n",
       "\n",
-      "      Shell weight  Rings  \n",
-      "0           0.1500     15  \n",
-      "1           0.0700      7  \n",
-      "2           0.2100      9  \n",
-      "3           0.1550     10  \n",
-      "4           0.0550      7  \n",
-      "...            ...    ...  \n",
-      "4172        0.2490     11  \n",
-      "4173        0.2605     10  \n",
-      "4174        0.3080      9  \n",
-      "4175        0.2960     10  \n",
-      "4176        0.4950     12  \n",
+      "      Viscera weight  Shell weight  \n",
+      "0             0.1010        0.1500  \n",
+      "1             0.0485        0.0700  \n",
+      "2             0.1415        0.2100  \n",
+      "3             0.1140        0.1550  \n",
+      "4             0.0395        0.0550  \n",
+      "...              ...           ...  \n",
+      "4172          0.2390        0.2490  \n",
+      "4173          0.2145        0.2605  \n",
+      "4174          0.2875        0.3080  \n",
+      "4175          0.2610        0.2960  \n",
+      "4176          0.3765        0.4950  \n",
       "\n",
       "[4177 rows x 8 columns]\n",
-      "Y --------- Y 0       0.455\n",
-      "1       0.350\n",
-      "2       0.530\n",
-      "3       0.440\n",
-      "4       0.330\n",
-      "        ...  \n",
-      "4172    0.565\n",
-      "4173    0.590\n",
-      "4174    0.600\n",
-      "4175    0.625\n",
-      "4176    0.710\n",
-      "Name: Length, Length: 4177, dtype: float64\n"
+      "Y --------- Y 0       15\n",
+      "1        7\n",
+      "2        9\n",
+      "3       10\n",
+      "4        7\n",
+      "        ..\n",
+      "4172    11\n",
+      "4173    10\n",
+      "4174     9\n",
+      "4175    10\n",
+      "4176    12\n",
+      "Name: Rings, Length: 4177, dtype: int64\n"
      ]
     }
    ],
@@ -393,9 +393,9 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = abalone.drop(columns='Length')\n",
-    "Y = abalone[\"Length\"]\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.3)\n",
+    "X = abalone.drop(columns='Rings')\n",
+    "Y = abalone[\"Rings\"]\n",
+    "X_train, Y_train, X_test, Y_test = train_test_split(X,Y,train_size=0.7, test_size=0.3,random_state=0)\n",
     "\n",
     "print(\"X --------- X\",X)\n",
     "print(\"Y --------- Y\",Y)\n",
@@ -403,8 +403,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "random state = 0 train test split deer bh ystoi daraagiin udaa dahin ajilluulahad ijil data gargana"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +420,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +428,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "model = LinearRegression()\n",
-    "model.fit(X, y)\n"
+    "model.fit(X, Y)\n"
    ]
   },
   {
@@ -433,17 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients: [ 1.00000000e+00  6.80351939e-16 -4.57952225e-15 -4.50333343e-16\n",
-      "  1.34969494e-15 -3.01857022e-16 -1.17166854e-15  5.08959125e-17]\n",
+      "Coefficients: [  0.06368262  -1.57721493  13.42050382  11.8643924    9.25049011\n",
+      " -20.28094179  -9.76109706   8.5805683 ]\n",
       "----------------------------\n",
-      "Intercept   : -5.773159728050814e-15\n"
+      "Intercept   : 2.8993585908005635\n"
      ]
     }
    ],
@@ -451,9 +458,72 @@
     "coefficients = model.coef_\n",
     "intercept = model.intercept_\n",
     "\n",
+    "\n",
+    "\n",
     "print(\"Coefficients:\", coefficients)\n",
     "print(\"----------------------------\")\n",
     "print(\"Intercept   :\", intercept)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Rings   R-squared:                       0.528\n",
+      "Model:                            OLS   Adj. R-squared:                  0.527\n",
+      "Method:                 Least Squares   F-statistic:                     582.6\n",
+      "Date:                Thu, 04 Apr 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        19:35:54   Log-Likelihood:                -9248.8\n",
+      "No. Observations:                4177   AIC:                         1.852e+04\n",
+      "Df Residuals:                    4168   BIC:                         1.857e+04\n",
+      "Df Model:                           8                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "const              2.8994      0.275     10.545      0.000       2.360       3.438\n",
+      "Sex                0.0637      0.042      1.518      0.129      -0.019       0.146\n",
+      "Length            -1.5772      1.824     -0.864      0.387      -5.154       2.000\n",
+      "Diameter          13.4205      2.237      5.999      0.000       9.035      17.806\n",
+      "Height            11.8644      1.548      7.664      0.000       8.829      14.899\n",
+      "Whole weight       9.2505      0.733     12.628      0.000       7.814      10.687\n",
+      "Shucked weight   -20.2809      0.824    -24.602      0.000     -21.897     -18.665\n",
+      "Viscera weight    -9.7611      1.305     -7.482      0.000     -12.319      -7.203\n",
+      "Shell weight       8.5806      1.137      7.550      0.000       6.352      10.809\n",
+      "==============================================================================\n",
+      "Omnibus:                      939.269   Durbin-Watson:                   1.388\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2631.976\n",
+      "Skew:                           1.179   Prob(JB):                         0.00\n",
+      "Kurtosis:                       6.092   Cond. No.                         161.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "X = sm.add_constant(X)\n",
+    "model = sm.OLS(Y,X)\n",
+    "est = model.fit()\n",
+    "\n",
+    "print(est.summary())"
    ]
   },
   {
@@ -461,6 +531,79 @@
    "metadata": {},
    "source": [
     "# Define the problems of regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "668     13\n",
+       "1580     8\n",
+       "3784    11\n",
+       "463      5\n",
+       "2615    12\n",
+       "        ..\n",
+       "1052    12\n",
+       "3439     8\n",
+       "1174     9\n",
+       "2210    18\n",
+       "2408    15\n",
+       "Name: Rings, Length: 1254, dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solve the problem and train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AIC, BIC, Backward selection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make predictions"
    ]
   },
   {
